--- a/src/main/resources/templates/confirmation-link-page.html
+++ b/src/main/resources/templates/confirmation-link-page.html
@@ -88,8 +88,8 @@
                                               <a target="_blank"
                                                 ><img
                                                   class="adapt-img"
-                                                  src="image/naya.png"
-                                                  data-th-src="|cid:naya|"
+                                                  src="image/logo.jpeg"
+                                                  data-th-src="|cid:logo|"
                                                   alt
                                                   width="178"
                                                   style="
