logo change in confirmation email response

--- a/src/main/resources/templates/confirmation-link-page.html
+++ b/src/main/resources/templates/confirmation-link-page.html
@@ -88,7 +88,7 @@
                                               <a target="_blank"
                                                 ><img
                                                   class="adapt-img"
-                                                  src="image/logo.jpeg"
+                                                  src="image/loogo.png"
                                                   data-th-src="|cid:logo|"
                                                   alt
                                                   width="178"
